--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,10 +14,27 @@
     "@types/node": "^16.18.62",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "assert": "^2.1.0",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "dns": "^0.2.2",
+    "express": "^4.18.2",
+    "mobx": "^6.11.0",
+    "mobx-react-lite": "^4.0.5",
+    "net": "^1.0.2",
+    "path-browserify": "^1.0.1",
+    "pg": "^8.11.3",
+    "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.69.5",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.9.5",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +60,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/pg": "^8.10.9"
   }
 }
