--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-browserify": "^3.12.0",
     "dns": "^0.2.2",
     "express": "^4.18.2",
+    "firebase": "^10.6.0",
     "mobx": "^6.11.0",
     "mobx-react-lite": "^4.0.5",
     "net": "^1.0.2",
@@ -28,6 +29,7 @@
     "pg": "^8.11.3",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
@@ -62,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/pg": "^8.10.9"
   }
 }
