--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
-    "react-scripts": "5.0.1",
     "sass": "^1.69.5",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.9.5",
@@ -65,6 +64,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/pg": "^8.10.9"
+    "@babel/preset-react": "^7.23.3",
+    "@types/pg": "^8.10.9",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.1.3",
+    "react-scripts": "^5.0.1"
   }
 }
